features: add register user
